# acme-data-generation

./: .gitignore  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
acme_data_generation/: cli.py
acme_data_generation/base/: config.py
acme_data_generation/models/data/: aims.py
acme_data_generation/models/declarative/: aims.py  amos.py  mixins.py
acme_data_generation/providers/: airport.py
acme_data_generation/scripts/: db_utils.py  generate.py
data-sources/: aircraft-manufaturerinfo-lookup.csv
docs/: AMOS.sql  business_rules.md  classes.dot  maintenance-personnel-airport-lookup.csv  maintenance_events_and_operational_interruptions.md  rationale.md
old/java-project/: pom.xml
pgadmin4/: servers.json
project/: cli.py
project/base/: config.py  rules.py
project/models/classic/: __init__.py  (+1 more)
project/providers/: __init__.py  airport.py
project/scripts/: generate.py
python-project/: .gitignore  Makefile  Pipfile  alembic.ini  setup.py
python-project/docs/: business_rules.md  work_orders.md
python-project/project/: __init__.py  cli.py
python-project/src/: models.py
python-project/tests/: conftest.py  test_config.py  test_generate.py  test_populate.py  test_provider.py  test_to_csv.py  test_to_sql.py
tests/: conftest.py  pytest.ini  test_acme_data_generation.py  test_config.py  test_generate.py  test_orm.py  test_provider.py  test_to_csv.py  test_to_sql.py
tests-fixes/: AIMS-checks.sql  AMOS-check-R13.sql  AMOS-checks.sql  maintenance_202109151444-temp-AMOS.sql  workpackages_202109141507.sql
(+32 files in other folders)
