[tool.poetry]                                                                                                                                                                                   
name = "acme-data-generation"
version = "1.0.0rc"
description = "Tools to generate random data for the MIRI-DW practical assignments"
authors = ["Diego Quintana <daquintanav@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8.6"
Faker = "^4.14.2"
tqdm = "^4.51.0"
attrs = "^20.3.0"
SQLAlchemy-Utils = "^0.36.8"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pylint = "^2.6.0"
ipython = "^7.19.0"
sqlacodegen = "^2.3.0"
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"

[tool.poetry.scripts]
airbase-gen = "acme_data_generation.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

